@@ -1,3 +1,9 @@
+2012-12-16  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: MP4 reader: Fixed handling of edit lists if
+	the edit list is used to adjust the track's timecodes by a fixed
+	amount (either positive or negative). Fixes #780.
+
 2012-12-10  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvpropedit: bug fix: Giving a non-existent file name in tags
